# cplusplus-software-interoperability-for-windows-programmers

./: .gitignore  BuildInstructions.txt  LICENSE.txt  NuGet.config  README.md  ReadMeEx.md  SoftwareInteroperability.sln
Data/: HouseData.csv  StatsATLCOMTest.xlsm  StatsCLRTest.xlsx  StatsService.ps1  ftest-x1.txt  ftest-x2.txt  jp-mpg.txt  jp_mpg.csv  moving_average.txt  us-mpg.txt  us_jp_mpg.csv  us_mpg.csv  weight.txt  x2.txt  xs1.txt  ys.txt  ys1.txt
StatsATLCOM/: CTTest.cpp  CTTest.h  CTTest.rgs  Conversion.cpp  Conversion.h  StatsATLCOM.aps  StatsATLCOM.cpp  StatsATLCOM.def  StatsATLCOM.idl  StatsATLCOM.rc  StatsATLCOM.vcxproj  StatsATLCOM.vcxproj.filters  StatsATLCOM_i.c  StatsATLCOM_i.h  StatsATLCOM_p.c  StatsLibWrapper.cpp  StatsLibWrapper.h  StatsLibWrapper.rgs  dlldata.c  dllmain.cpp  dllmain.h  framework.h  resource.h  xdlldata.c
StatsCLR/: AssemblyInfo.cpp  Conversion.cpp  Conversion.h  DataManager.cpp  DataManager.h  StatisticalTests.cpp  StatisticalTests.h  Statistics.cpp  Statistics.h  StatsCLR.vcxproj  StatsCLR.vcxproj.filters  pch.cpp  pch.h
StatsCLR.UnitTests/: StatsCLR.UnitTests.csproj  UnitTests.cs  packages.config
StatsClient/: DataAnalysis.cs  DataModelling.cs  DynamicInvocation.cs  HypothesisTest.cs  ModuleInfo.cs  Program.cs  StatisticalFunctions.cs  StatsClient.csproj  packages.config
StatsConsole/: MenuManager.cpp  MenuManager.h  StatsConsole.cpp  StatsConsole.vcxproj  StatsConsole.vcxproj.filters
StatsConsoleCB/: StatsConsoleCB.cbp  StatsConsoleCB.depend  StatsConsoleCB.layout  main.cpp
StatsLibCM/: CMakeLists.txt  CMakeSettings.json
StatsR/: NAMESPACE  (+8 more)
(+117 files in other folders)
